# vlm

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml
docs/: plan.md
scripts/: demo.py  download_models.py
src/vlm/: __init__.py  main.py
src/vlm/aggregation/: delta_encoder.py  feature_store.py  scene_graph.py  token_budget.py
src/vlm/analysis/: expression.py  motion.py  optical_flow.py  per_id_analyzer.py  pose.py
src/vlm/capture/: change_detector.py  predictive_coder.py  saliency.py  screen.py
src/vlm/common/: config.py  datatypes.py  device.py  validators.py
src/vlm/detection/: base.py  yolo_detector.py
src/vlm/narration/: context_manager.py  llm_client.py  prompt_builder.py
src/vlm/tracking/: id_authority.py  track_store.py  working_memory.py
tests/: conftest.py
tests/test_aggregation/: test_delta_encoder.py  test_scene_graph.py
tests/test_analysis/: test_motion.py  test_optical_flow.py
tests/test_capture/: test_change_detector.py  test_predictive_coder.py  test_saliency.py
tests/test_detection/: test_class_filter.py
tests/test_narration/: test_context_manager.py  test_prompt_builder.py
tests/test_tracking/: test_id_authority.py  test_working_memory.py
